--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ body {
   font-family:Georgia, serif;
   font-size:14px;
   line-height:24px;
-  background:#fe5484;
+  background:#FFFFFF;
 }
 
 #container {
@@ -131,17 +131,17 @@ body {
   font-size:80px;
   line-height:50px;
   color:#000;
-  text-shadow:0 5px 8px rgba(0, 0, 0, 0.075);
+  text-shadow:0 5px 8px rgba(255, 255, 255, 1);
   text-align:center;
-  background:#fafafa;
-  border-bottom:1px solid #eee;
+  background:#F9F9F9;
+  border-bottom:5px solid #0099E5;
   -webkit-box-shadow: 0 5px 8px -5px rgba(0, 0, 0, 0.075);
   -moz-box-shadow: 0 5px 8px -5px rgba(0, 0, 0, 0.075);
   box-shadow: 0 5px 8px -5px rgba(0, 0, 0, 0.075);
 }
 
 #header a {
-  color:#333;
+  color:#262626;
 }
 
 #ad_leaderboard {
@@ -178,13 +178,12 @@ p {
   width:600px;
   padding:5px 30px 10px 30px;
   margin:0 auto 50px auto;
-  border:1px solid #ECECEC;
+/*  border:1px solid #ECECEC;
   border-bottom: 1px solid #ECECEC;
   -webkit-box-shadow: 0 0 10px rgba( 0, 0, 0, 0.1 );
   -moz-box-shadow: 0 0 10px rgba( 0, 0, 0, 0.1 );
-  box-shadow: 0 0 10px rgba( 0, 0, 0, 0.1 );
+  box-shadow: 0 0 10px rgba( 0, 0, 0, 0.1 );*/
   background:#ffffff;
-  border-radius:4px;
 }
 
 .post .content a {
@@ -206,7 +205,7 @@ p {
 }
 
 .title {
-  font-family:Helvetica, sans-serif;
+  font-family:"Myriad Pro", Helvetica, sans-serif;
   font-weight:bold;
   font-size:25px;
   line-height:28px;
@@ -222,6 +221,7 @@ p {
   height:18px;
   overflow:hidden;
   color:#777;
+  border-bottom:2px solid #0099E5;
   -webkit-box-shadow: 0 5px 8px -5px rgba(0, 0, 0, 0.075);
   -moz-box-shadow: 0 5px 8px -5px rgba(0, 0, 0, 0.075);
   box-shadow: 0 5px 8px -5px rgba(0, 0, 0, 0.075);
@@ -237,17 +237,10 @@ p {
   width:50%;
 }
 
-.share a, .comments a {
-  background:#fafafa;
-  color:#fff;
-  padding:3px;
-  margin-left:2px;
-  border-radius:5px;
-  font-weight:bold;
-}
-
 .actions a {
-  color:#fff;
+  color:#777;
+  font-weight:bold;
+  margin-left:7px;
 }
 
 .post .imgwrapper.aligncenter {
