--- a/style.css
+++ b/style.css
@@ -118,6 +118,11 @@ body {
   background:#FFFFFF;
 }
 
+hr {
+  border-style:none;
+  border-bottom: 2px solid #333;
+}
+
 #container {
   width:1000px;
   margin:0 auto;
@@ -125,23 +130,31 @@ body {
 
 #header {
   width:100%;
-  padding:50px 0 50px 0;
+  padding:50px 0 0px 0;
   margin:0 auto 20px;
-  font-family:Clarendon;
-  font-size:80px;
-  line-height:50px;
   color:#000;
   text-shadow:0 5px 8px rgba(255, 255, 255, 1);
   text-align:center;
-  background:#F9F9F9;
-  border-bottom:5px solid #0099E5;
+  font-style:italic;
+/*  background:#F9F9F9;
+  border-bottom:5px solid #333;
   -webkit-box-shadow: 0 5px 8px -5px rgba(0, 0, 0, 0.075);
   -moz-box-shadow: 0 5px 8px -5px rgba(0, 0, 0, 0.075);
-  box-shadow: 0 5px 8px -5px rgba(0, 0, 0, 0.075);
+  box-shadow: 0 5px 8px -5px rgba(0, 0, 0, 0.075);*/
 }
 
 #header a {
   color:#262626;
+}
+
+.circle {
+  border:4px solid #333; 
+  width:150px; 
+  height:150px; 
+  border-radius:80px; 
+  margin:0 auto; 
+  background:-37px 6 url('http://deanputney.com/img/dean_head_rotate2_500.gif'); 
+  background-size:150%;
 }
 
 #ad_leaderboard {
@@ -221,7 +234,7 @@ p {
   height:18px;
   overflow:hidden;
   color:#777;
-  border-bottom:2px solid #0099E5;
+  border-bottom:2px solid #333;
   -webkit-box-shadow: 0 5px 8px -5px rgba(0, 0, 0, 0.075);
   -moz-box-shadow: 0 5px 8px -5px rgba(0, 0, 0, 0.075);
   box-shadow: 0 5px 8px -5px rgba(0, 0, 0, 0.075);
@@ -244,35 +257,34 @@ p {
 }
 
 .post .imgwrapper.aligncenter {
-  width:800px;
-  margin:0 0 20px -100px;
+  width:1000px;
+  margin:0 0 20px -200px;
   background:#fff;
   text-align:center;
-  -webkit-box-shadow: 0 0 10px rgba( 0, 0, 0, 0.1 );
-  -moz-box-shadow: 0 0 10px rgba( 0, 0, 0, 0.1 );
-  box-shadow: 0 0 10px rgba( 0, 0, 0, 0.1 );
 }
 
 .post .imgwrapper.aligncenter img {
-  max-width:800px;
+  width:1000px !important;
   height:auto;
 }
 
 .post img {
-/*  -moz-box-shadow:0px 3px 7px #ccc;
-  -webkit-box-shadow:0px 3px 7px #ccc;
-  box-shadow:0px 3px 7px #ccc;*/
+  -webkit-box-shadow: 0 3px 7px rgba( 0, 0, 0, 0.1 );
+  -moz-box-shadow: 0 3px 7px rgba( 0, 0, 0, 0.1 );
+  box-shadow: 0 3px 7px rgba( 0, 0, 0, 0.1 );
   -webkit-transition:all 0.2s ease-in-out;
   -moz-transition:all 0.2s ease-in-out;
   -o-transition:all 0.2s ease-in-out;
   transition:all 0.2s ease-in-out;
+  width:100%;
+  height:auto;
 }
 
 .post img:hover {
   opacity:.95;
-/*  -moz-box-shadow:0px 3px 7px #999;
-  -webkit-box-shadow:0px 3px 7px #999;
-  box-shadow:0px 3px 7px #999;*/
+  -moz-box-shadow:0px 3px 7px rgba( 0, 0, 0, 0.2 );
+  -webkit-box-shadow:0px 3px 7px rgba( 0, 0, 0, 0.2 );
+  box-shadow:0px 3px 7px rgba( 0, 0, 0, 0.2 );
 }
 
 .aligncenter {
