--- a/style.css
+++ b/style.css
@@ -235,6 +235,7 @@ p {
   overflow:hidden;
   color:#777;
   border-bottom:2px solid #333;
+  margin-top:20px;
   -webkit-box-shadow: 0 5px 8px -5px rgba(0, 0, 0, 0.075);
   -moz-box-shadow: 0 5px 8px -5px rgba(0, 0, 0, 0.075);
   box-shadow: 0 5px 8px -5px rgba(0, 0, 0, 0.075);
@@ -298,6 +299,15 @@ p {
 
 .alignright {
 	float:right;
+}
+
+.post ul {
+  list-style:disc;
+  margin-left:55px;
+}
+
+.post li {
+  margin-bottom:12px;
 }
 
 #comments {
