--- a/style.css
+++ b/style.css
@@ -333,8 +333,8 @@ p {
   
   #header {
     width:600px;
-    padding:50px 0;
-    margin:0 auto 50px;
+    padding:50px 0 0px;
+    margin:0 auto 20px;
   }
   
   .post {
@@ -364,8 +364,6 @@ p {
     width:320px;
     padding:50px 0;
     margin:0 auto 50px;
-    font-size:50px;
-    line-height:30px;
     background-size:auto;
   }
   
