Wrapping wide images with captions 2

--- a/style.css
+++ b/style.css
@@ -257,7 +257,7 @@ p {
   margin-left:7px;
 }
 
-.post .imgwrapper.aligncenter {
+.post .imgwrapper {
   width:1000px;
   margin:0 0 20px -200px;
   background:#fff;
