Wrapping wide images with captions 10

--- a/style.css
+++ b/style.css
@@ -351,9 +351,7 @@ p {
   }
   
   .post .overhang {
-    width:600px;
-    margin:0;
-    text-align:center;
+    width:600px !important;
   }
   
   .post img {
