--- a/style.css
+++ b/style.css
@@ -377,24 +377,28 @@ p {
   }
   
   #header {
-    width:320px;
+    width:310px;
     padding:50px 0;
     margin:0 auto 50px;
     background-size:auto;
   }
   
   .post, .wp-caption {
-    width:320px !important;
+    width:310px !important;
+  }
+  
+  .wp-caption {
+    font-size:10px;
   }
   
   .post .overhang {
-    width:320px !important;
+    width:310px !important;
     margin:0;
     text-align:center;
   }
   
   .post img {
-    max-width:320px !important;
+    max-width:310px !important;
     height:auto;
   }
   
