--- a/style.css
+++ b/style.css
@@ -371,7 +371,8 @@ p {
 
 @media screen and (max-width:650px) {
   #container {
-    width:320px;
+    border: 1px solid #eee;
+    width:310px;
     padding:0 5px;
     overflow-x:hidden;
   }
