--- a/style.css
+++ b/style.css
@@ -387,7 +387,7 @@ p {
     width:310px !important;
   }
   
-  .wp-caption, .wp-caption-text {
+  .wp-caption, .wp-caption-text, p.wp-caption-text {
     font-size:10px;
   }
   
