--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ hr {
   color:#262626;
 }
 
-.circle {
+#header .circle {
   border:4px solid #333; 
   width:150px; 
   height:150px; 
@@ -378,9 +378,31 @@ p {
   
   #header {
     width:310px;
-    padding:50px 0;
+    padding:20px 0;
     margin:0 auto 50px;
     background-size:auto;
+  }
+  
+  #header .alpha, #header .beta {
+    display:none;
+  }
+  
+  #header .mobile {
+    display:block;
+    width:180px;
+    text-align:left !important;
+    float:left;
+    margin:20px 0 0 0;
+  }
+  
+  #header .circle {
+    float:right;
+    width:100px; 
+    height:100px; 
+    margin:0 auto; 
+    background:url('http://deanputney.com/img/dean_head_rotate2_500.gif'); 
+    background-size:150%;
+    background-position:-25px 0px;
   }
   
   .post, .wp-caption {
